# Project_HDRBloom

./: CMakeLists.txt  GenerateProjectFiles_vs2019.bat  GenerateProjectFiles_vs2022.bat  HotReload_vs2019.bat  HotReload_vs2022.bat  README.md
HDRBloom/: CMakeLists.txt
HDRBloom/Inc/: Application.h  Vertex2D.h
HDRBloom/Src/: Application.cpp  GeometryPass2D.cpp  Main.cpp
Module/AudioModule/Inc/: AudioModule.h
Module/AudioModule/Src/: AudioModule.cpp
Module/RenderModule/Inc/: BloomEffector.h  ColorFrameBuffer.h  FrameBuffer.h  FrameRenderer.h  GaussianBlurEffector.h  GeometryPass2D.h  GeometryRenderer2D.h  RenderModule.h  TTFont.h  TextRenderer2D.h
Module/RenderModule/Src/: BloomEffector.cpp  ColorFrameBuffer.cpp  FrameBuffer.cpp  FrameRenderer.cpp  GaussianBlurEffector.cpp  GeometryRenderer2D.cpp  RenderModule.cpp  TextRenderer2D.cpp
Resource/Shader/: Bloom.frag  FrameRenderer.frag  GaussianBlur.frag  TextRenderer2D.frag
